--- a/TRANSCARTO_flows.Rmd
+++ b/TRANSCARTO_flows.Rmd
@@ -312,7 +312,7 @@ write.csv(migr, "data/migr.csv", row.names = FALSE)
 
 **FB: sauvegarde de la matrice carree et fermée avec des zéros. C'est important car permet de calculer la densité de la matrice (tx de remplissage) = nb de liens renseignes / nb de liens theoriques. Ce qui est un premier indicateur**
 
-Sauvegarder du fichier (matrice carrée incluant les zero) mis en forme au format .csv
+Sauvegarde du fichier (matrice carrée incluant les zero) mis en forme au format .csv
 ```{r, eval = TRUE, message = FALSE, warning = FALSE}
 write.csv(tabflow2, "data/migr2.csv", row.names = FALSE)
 ```
@@ -488,7 +488,7 @@ Raisonnons maintenant sur les relations entre les lieux.
 
 ## Choix des relations avec un pays de référence
 
-Réalisation d'une troisème carte mettant en relation la France avec les pays d'origine des étrangers qui résident sur le territoire national, et pondération de ces liens en fonction du nombre de personnes concernées.
+Réalisation d'une troisième carte mettant en relation la France avec les pays d'origine des étrangers qui résident sur le territoire national, et pondération de ces liens en fonction du nombre de personnes concernées.
 
 
 Préparation d'une sous-matrice migrtoFRA formée des liens entrant dans la colonne iso3=FRA.
@@ -516,7 +516,7 @@ Cartographie de ces liens avec une dimension de largeur proportionnelle à l'eff
 
 ```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
 template(
-  paste0("Origine des personnes migrantes vivant en ", label, " en 2019"),
+  paste0("Origine des personnes étrangères vivant en ", label, " en 2019"),
   "maps/links1.png"
 )
 mf_map(
@@ -549,11 +549,36 @@ La matrice étant orientée, il est possible de raisonner selon les flux entre l
 
 **FRANCOISE, TU METS TES TRUCS ICI !**
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ac commodo ante. Sed tincidunt tincidunt sollicitudin. Mauris odio orci, viverra et porttitor vitae, porta et arcu. Nam quis neque at elit accumsan fringilla. Cras rhoncus efficitur malesuada. Donec auctor, mauris sit amet mollis dignissim, purus urna ultricies ligula, non dictum sem quam in justo. Maecenas sit amet est accumsan, ullamcorper nulla luctus, efficitur diam. Aenean ac magna ut enim lacinia ultrices nec et sapien. Praesent scelerisque massa eros, vel tempus orci maximus at. Duis eget ipsum auctor, luctus ante in, egestas libero. Vestibulum vehicula ex a aliquam aliquam. Donec non efficitur risus. Aenean ut venenatis nisi, vitae iaculis nibh. Cras fermentum orci vel tempor sodales.
+**Le principe général est de sélectionner les liens à représenter pour ne représenter que ceux jugés "significatifs". Le filtrage peut être soit global (on applique une valeur unique en deça/au-dessus de laquelle les flux ne seront pas représentés ou soit local, concernant les lieux.**
 
-Sed viverra ut ipsum in commodo. Quisque tempus tempus tortor ut feugiat. Morbi viverra, metus id feugiat vulputate, augue libero condimentum ex, vestibulum volutpat odio metus id arcu. Integer ullamcorper sed sapien ut sollicitudin. Ut aliquet, leo at elementum ornare, sem ante lacinia ante, ac porttitor justo arcu nec dolor. Cras porta nisl lobortis leo dignissim ullamcorper. Cras eu lorem imperdiet, malesuada risus ac, tempus neque. Integer in erat consequat, posuere sapien quis, pulvinar turpis. In sagittis cursus commodo. Praesent pellentesque commodo velit, quis suscipit dui sodales tristique. Mauris eleifend quam et odio viverra, quis suscipit ex semper. In semper id sapien id egestas. Mauris eros metus, rhoncus eu arcu convallis, sagittis tempor nunc. Pellentesque hendrerit, tortor at lacinia lacinia, neque neque interdum lacus, in finibus tortor metus et arcu. Praesent sed viverra lectus, nec elementum velit. In faucibus neque in risus ultricies cursus vel sed magna.
+## Application d'un critère global
 
-Mauris a ante nec mi ornare egestas sit amet vel mauris. Maecenas ac dolor id dolor facilisis fermentum id a orci. Praesent sed dolor non nisl vulputate pulvinar. Donec vehicula vitae massa vel semper. Sed sit amet cursus odio. Fusce blandit ligula mollis justo consectetur, eget finibus nulla molestie. Morbi convallis nulla non mi finibus tempor. Vestibulum sagittis vitae mauris ut pulvinar. Morbi aliquam iaculis leo. Cras massa odio, commodo eu libero sit amet, dictum condimentum dolor. Donec posuere rutrum purus vitae euismod. Phasellus vel leo nec nisl varius luctus. Cras sed suscipit quam.
+Tobler indique que seuls les flux supérieurs à la moyenne devront être représentés.
+On peut faire un test. Ce critère n'est pas toujours suffisant, car dépend de la densité de la matrice. Il est plus prudent de sélectionner un critère selon les quantile.
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+ 
+fij<-(tabflow2$fij)
+
+mean<-mean(fij)     #as Tobler
+
+#Q3<-quantile(flow$fij,0.75)   #25% of the most important migrations
+#Q95<-quantile(flow$fij, 0.95) # 5% of the most important migrations
+#Q98<-quantile(flow$fij, 0.98) # 2% of the most important migrations
+
+max<-max(tabflow2$fij)
+
+```
+
+Flux supérieurs à la moyenne
+
+
+
+
+
+
+
+
 
 # Vers des cartes un peu plus graphiques
 
