--- a/TRANSCARTO_flows.Rmd
+++ b/TRANSCARTO_flows.Rmd
@@ -1173,12 +1173,21 @@ subregions <- st_read(system.file("subregions.gpkg", package="flowmapper")) %>% 
 migr <- read.csv(system.file("migrantstocks2019.csv", package="flowmapper"))
 ```
 
-Sélection des flux les plus importants
+Sélection des flux les plus importants (environ 1/3 des plus forts)
+
+```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
+#mean_migr<-mean(migr$fij)
+Q65_migr<-quantile(migr$fij, 0.65) #1/3 des migrations les plus importantes
+
+```
+
 
 ```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
 threshold <- 1500
 migr <- migr[migr$fij >= threshold, ]
 ```
+
+
 
 ```{r, eval = TRUE, message = FALSE, warning = FALSE}
 knitr::kable(migr[c(0:10),], row.names = F, digits = 1)
