--- a/TRANSCARTO_flows.Rmd
+++ b/TRANSCARTO_flows.Rmd
@@ -1168,9 +1168,16 @@ library("ttt")
 
 Dans le package ttt, il y a des données d'exemple au niveau subrégional. Chargeons-les. 
 
+
 ```{r, eval = TRUE, message = FALSE, warning = FALSE, results = "hide"}
-subregions <- st_read(system.file("subregions.gpkg", package="flowmapper")) %>% st_transform(crs)
-migr <- read.csv(system.file("migrantstocks2019.csv", package="flowmapper"))
+
+#subregions <- st_read(system.file("subregions.gpkg", package="flowmapper")) %>% st_transform(crs)
+#migr <- read.csv(system.file("migrantstocks2019.csv", package="flowmapper"))
+
+subregions <- st_read(system.file("subregions.gpkg", package="ttt")) %>% 
+  st_transform(crs)
+migr <- read.csv(system.file("migrantstocks2019.csv", package="ttt"))
+
 ```
 
 Sélection des flux les plus importants (environ 1/3 des plus forts)
